; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/msm/disp/mdp5/extr_mdp5_plane.c_mdp5_plane_install_rotation_property.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/msm/disp/mdp5/extr_mdp5_plane.c_mdp5_plane_install_rotation_property.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_device = type { i32 }
%struct.drm_plane = type { i32 }

@DRM_MODE_ROTATE_0 = common dso_local global i32 0, align 4
@DRM_MODE_ROTATE_180 = common dso_local global i32 0, align 4
@DRM_MODE_REFLECT_X = common dso_local global i32 0, align 4
@DRM_MODE_REFLECT_Y = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.drm_device*, %struct.drm_plane*)* @mdp5_plane_install_rotation_property to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mdp5_plane_install_rotation_property(%struct.drm_device* %0, %struct.drm_plane* %1) #0 {
  %3 = alloca %struct.drm_device*, align 8
  %4 = alloca %struct.drm_plane*, align 8
  store %struct.drm_device* %0, %struct.drm_device** %3, align 8
  store %struct.drm_plane* %1, %struct.drm_plane** %4, align 8
  %5 = load %struct.drm_plane*, %struct.drm_plane** %4, align 8
  %6 = load i32, i32* @DRM_MODE_ROTATE_0, align 4
  %7 = load i32, i32* @DRM_MODE_ROTATE_0, align 4
  %8 = load i32, i32* @DRM_MODE_ROTATE_180, align 4
  %9 = or i32 %7, %8
  %10 = load i32, i32* @DRM_MODE_REFLECT_X, align 4
  %11 = or i32 %9, %10
  %12 = load i32, i32* @DRM_MODE_REFLECT_Y, align 4
  %13 = or i32 %11, %12
  %14 = call i32 @drm_plane_create_rotation_property(%struct.drm_plane* %5, i32 %6, i32 %13)
  ret void
}

declare dso_local i32 @drm_plane_create_rotation_property(%struct.drm_plane*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
